@@ -1,0 +1,86 @@
+name: /potato
+test suite: terminating parsing
+real: 0.1
+integer: 0
+integer: 0
+real: 0.1
+integer: 0
+integer: 0
+operator: cm
+operator: q
+integer: 0
+real: 1.1999
+real: -1.1999
+integer: 0
+real: 121.19
+real: 150.009
+operator: cm
+operator: BI
+name: /CS
+name: /G
+name: /W
+integer: 1
+name: /H
+integer: 1
+name: /BPC
+integer: 8
+name: /F
+name: /Fl
+name: /DP
+dictionary: << /Columns 1 /Predictor 15 >>
+operator: ID
+inline-image: 789c63fc0f0001030101
+operator: EI
+operator: Q
+operator: q
+integer: 0
+real: 35.997
+real: -128.389
+integer: 0
+real: 431.964
+real: 7269.02
+operator: cm
+operator: BI
+name: /CS
+name: /G
+name: /W
+integer: 30
+name: /H
+integer: 107
+name: /BPC
+integer: 8
+name: /F
+name: /Fl
+name: /DP
+dictionary: << /Columns 30 /Predictor 15 >>
+operator: ID
+inline-image: 789cedd1a11100300800b1b2ffd06503148283bc8dfcf8af2a306ee352eff2e06318638c31c63b3801627b620a
+operator: EI
+operator: Q
+operator: q
+integer: 0
+real: 38.3968
+real: -93.5922
+integer: 0
+real: 431.964
+real: 7567.79
+operator: cm
+operator: BI
+name: /CS
+name: /G
+name: /W
+integer: 32
+name: /H
+integer: 78
+name: /BPC
+integer: 8
+name: /F
+name: /Fl
+name: /DP
+dictionary: << /Columns 32 /Predictor 15 >>
+operator: ID
+inline-image: 789c63fccf801f308e2a185530aa60882a20203faa605401890a0643aa1e5530aa6054010d140000bdd03c13
+operator: EI
+operator: Q
+-EOF-
+test 37 done
